--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.3",
     "jquery": "^3.7.1",
-    "pixi.js": "^8.4.0",
+    "pixi.js": "^6.0.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
     "react-speech-recognition": "^3.10.0",
     "read-excel-file": "^5.8.3",
+    "string-similarity": "^4.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
