--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-speech-recognition": "^3.10.0",
     "read-excel-file": "^5.8.3",
     "string-similarity": "^4.0.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
