--- a/.gitignore
+++ b/.gitignore
@@ -10,8 +10,8 @@
 # mp3 files in cutData
 /src/cutAudio/data/*.mp3
 !/src/cutAudio/data/mp3.mp3
-# all mp4
-.mp4
+# ignore all mp4 files
+*.mp4
 
 
 # production
